--- a/css/main.css
+++ b/css/main.css
@@ -5,4 +5,21 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+ul li{
+    list-style: none;
+}
+.draw_matrix{
+    width: 100%;
+    margin:0px;
+    padding:0px;
+}
+.draw_matrix li{
+    width:100%;
+}
+.draw_matrix li input {
+    height:50px;
+    width:50px;
+    margin:1px;
+}
+
 
